apps/shared/base/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: argocd.idk8s.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
