apps/shared/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idk8s-web-ingress
  namespace: default # Will be overwritten by kustomize overlay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: default.example  # This is a placeholder value
    http:
      paths:
      - path: /api/v1/(.*)
        pathType: Prefix
        backend:
          service:
            name: idk8s-apiv1-service
            port:
              number: 3000
      - path: /api/v2/(.*)
        pathType: Prefix
        backend:
          service:
            name: idk8s-apiv2-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: idk8s-web-service
            port:
              number: 80
